--- a/LM/Project/Step-1/styles/index.css
+++ b/LM/Project/Step-1/styles/index.css
@@ -126,9 +126,180 @@ main {
     padding: 100px 25%;
 }
 
+
+section h1{
+font-weight: 900;
+ font-size: xx-large;
+}
+
+section span{
+    font-weight: 600;
+     font-size: large
+}
+
+/* -------------------------------------- */
+
+.carro-grid {
+    margin-top: 100px;
+    display: grid;
+    justify-content: center;
+    align-items: center;
+    grid-template-columns: repeat(2, minmax(500px, 1fr));
+    gap: 100px;
+    padding: 20px;
+
+
+    /*
+     O margin top vai afastar do item em cima em 100px para ter melhor visual.
+     Coloquei o display grid para organizar melhor o layout e colocar as colunas e os modelos futuros de carros com maior organização dentro do layout e do container pai.
+     Coloquei o justify contenter center para alinhar alinhas os itens dentro do container pai horizontalmente no centro.
+     O align items: center eu coloquei para fazer o alinhamento dos itens no centro também, porém verticalmente.
+     No grid template coluns, coloquei para ter no minimo 2 itens por coluna em cada linha, cada um com 500px, e se tiver espaço dentro do container pai, podendo se expandir para melhor visualização do layout.
+     Coloquei dentro do gap 100px para que os itens tenham um afastamento de 100px de cada linha e coluna para melhor visualização dentro do container pai no layout.
+     Coloquei um padding 20px para que cada item dentro do container pai tenha um preenchimento de 20px
+    */
+    
+}
+
+.carro-item {
+    position: relative;
+    overflow: hidden;
+    background: #fff;
+    border-radius: 8px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
+    height: 400px;
+
+
+    /*
+    Coloquei um background branco para que cada item dentro tenha a cor branca sem a foto
+    Coloquei um border radius 8px para que cada item dentro do container pai tenha uma borda arrendonda de 8 px
+    Coloquei um box-shadow com 0 4px e 8 px com cor preto para que tenha um destaque de profundidade ao redor do elemento
+    Coloquei um transition com transform 0.3s ease para que cada item tenha um bloco de animação com uma duração de 0.3 segundos e coloquei com ease para ter uma velocidade de animação ao passar em cima dela
+    Coloquei tambem um height de 400px para cada item dentro do container pai  */
+    
+}
+
+.carro-item img {
+    width: 100%;
+    display: block;
+    transition: opacity 0.3s ease;
+    height: 400px;
+}
+
+.carro-item .texto-oculto {
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.7);
+    
+    color: #fff;
+    padding: 20px;
+    box-sizing: border-box;
+    text-align: center;
+    overflow-y: auto;
+    transition: opacity 0.6s ease;
+    text-align: left;
+    
+}
+
+.carro-item:hover .texto-oculto {
+    display: block;
+    opacity: 1;
+    cursor: pointer;
+}
+
+.carro-item:hover img {
+    opacity: 0;
+    cursor: pointer;
+}
+
+.carro-item:hover {
+    transform: scale(1.05);
+}
+
+
+
+.section-cep {
+    background-color: #fff;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    width: 30%;
+  
+}
+
+.section-cep h2 {
+     /*font-size: 20px; */
+    margin-bottom: 10px;
+}
+
+.section-cep p {
+    /* font-size: 18px;*/
+    color: #666;
+    margin-bottom: 20px;
+}
+
+.section-cep input img {
+    
+    padding: 10px;
+    width: 100%;
+    max-width: 500px;
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 200px;
+    padding: 10px 10px 10px 40px; /* Espaço à esquerda para a lupa */
+}
+
+.pesquisa{
+    position: relative;
+    width: 100%;
+    max-width: 500px;
+}
+
+.pesquisa img.Lupa{
+    position: absolute;
+    top: 50%;
+    left: 10px;
+    transform: translateY(-50%);
+    width: 20px;
+    height: 20px;
+    pointer-events: none;
+}
+
+.pesquisa input{
+    width: 100%;
+    max-width: 500px;
+    padding: 10px 10px 10px 40px; /* Espaço à esquerda para a lupa */
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 200px;
+}
+
+
+/* -------------------------------------- */
+
+
 /*Aba de Sobre/Footer*/
 footer {
     height: 10vh;
     background: #ecece2;
     text-align: center;
+}
+
+.teste{
+    border: 1px solid black;
+    height: 600px;
+    
+    
 }
