Add project new feature

--- a/LM/Project/Step-1/styles/index.css
+++ b/LM/Project/Step-1/styles/index.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
 * {
-    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -12,12 +11,10 @@ html {
     scroll-behavior: smooth;
 }
 
-
-/*Tela Inicial*/
+/* Tela Inicial */
 header {
     position: relative;
     min-height: 100vh;
-
 }
 
 header .container {
@@ -31,7 +28,6 @@ header .container {
     background: #000;
     color: #fff;
     backdrop-filter: blur(30px);
-    overflow: hidden;
 }
 
 header .center-container {
@@ -59,7 +55,7 @@ header nav a:hover {
 }
 
 .text-center button {
-    margin: 20px 0px;
+    margin: 20px 0;
     background: #ff0000;
     width: 250px;
     color: #fff;
@@ -91,11 +87,11 @@ header nav a:hover {
 }
 
 .arrow-left {
-    left: 0px; 
+    left: 0;
 }
 
 .arrow-right {
-    right: 0px; 
+    right: 0;
 }
 
 .pagination {
@@ -112,117 +108,117 @@ header nav a:hover {
 .page {
     width: 10px;
     height: 10px;
-    padding: 5px;
     border: 5px solid #fff;
     border-radius: 50%;
     margin: 0 10px;
     cursor: pointer;
 }
 
-/*Tela principal/produtos*/
+/* Tela principal/produtos */
 main {
     min-height: 100vh;
     text-align: center;
     padding: 100px 25%;
 }
 
-
-section h1{
-font-weight: 900;
- font-size: xx-large;
+section h1 {
+    font-weight: 900;
+    font-size: xx-large;
 }
 
-section span{
+section span {
     font-weight: 600;
-     font-size: large
+    font-size: large;
 }
 
-/* -------------------------------------- */
-
+/* Grid de Carros */
 .carro-grid {
     margin-top: 100px;
     display: grid;
     justify-content: center;
     align-items: center;
     grid-template-columns: repeat(2, minmax(500px, 1fr));
-    gap: 100px;
+    gap: 50px;
     padding: 20px;
-
-
-    /*
-     O margin top vai afastar do item em cima em 100px para ter melhor visual.
-     Coloquei o display grid para organizar melhor o layout e colocar as colunas e os modelos futuros de carros com maior organização dentro do layout e do container pai.
-     Coloquei o justify contenter center para alinhar alinhas os itens dentro do container pai horizontalmente no centro.
-     O align items: center eu coloquei para fazer o alinhamento dos itens no centro também, porém verticalmente.
-     No grid template coluns, coloquei para ter no minimo 2 itens por coluna em cada linha, cada um com 500px, e se tiver espaço dentro do container pai, podendo se expandir para melhor visualização do layout.
-     Coloquei dentro do gap 100px para que os itens tenham um afastamento de 100px de cada linha e coluna para melhor visualização dentro do container pai no layout.
-     Coloquei um padding 20px para que cada item dentro do container pai tenha um preenchimento de 20px
-    */
-    
 }
 
 .carro-item {
     position: relative;
     overflow: hidden;
     background: #fff;
-    border-radius: 8px;
+    border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    height: 85vh;
     transition: transform 0.3s ease;
-    height: 400px;
-
-
-    /*
-    Coloquei um background branco para que cada item dentro tenha a cor branca sem a foto
-    Coloquei um border radius 8px para que cada item dentro do container pai tenha uma borda arrendonda de 8 px
-    Coloquei um box-shadow com 0 4px e 8 px com cor preto para que tenha um destaque de profundidade ao redor do elemento
-    Coloquei um transition com transform 0.3s ease para que cada item tenha um bloco de animação com uma duração de 0.3 segundos e coloquei com ease para ter uma velocidade de animação ao passar em cima dela
-    Coloquei tambem um height de 400px para cada item dentro do container pai  */
-    
+    cursor: pointer;
 }
 
 .carro-item img {
     width: 100%;
-    display: block;
-    transition: opacity 0.3s ease;
-    height: 400px;
-}
-
-.carro-item .texto-oculto {
-    display: none;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.7);
-    
-    color: #fff;
-    padding: 20px;
-    box-sizing: border-box;
-    text-align: center;
-    overflow-y: auto;
-    transition: opacity 0.6s ease;
-    text-align: left;
-    
-}
-
-.carro-item:hover .texto-oculto {
     display: block;
-    opacity: 1;
-    cursor: pointer;
+    transition: transform 0.3s ease; 
+    object-fit: cover; 
 }
 
 .carro-item:hover img {
-    opacity: 0;
+    transform: scale(1.05); 
+}
+
+
+.butao{
+    display: flex;
+    flex-direction: column; /* Alinha os botões verticalmente */
+    align-items: center; /* Centraliza os botões horizontalmente */
+    gap: 10px; /* Espaço entre os botões */
+    position: absolute; /* Garante que o contêiner se posicione dentro do carro-item */
+    bottom: 5%; /* Ajuste a posição do contêiner conforme necessário */
+    left: 50%;
+    transform: translateX(-50%);;
+    width: 31vw;
+}
+
+.botao-01{
+    background-color: #f80808;
+    padding: 10px 20px; /* Ajuste o padding conforme necessário */
+    width: 100%; /* Ajuste a largura conforme necessário */
+    border-radius: 5px;
+    border: 1px solid #000000; /* Cor da borda */
+    font-family: "Noto Sans", sans-serif;
+    text-align: center;
+    cursor: pointer;
+    
+    color: #FFF;
+    font-weight: 800;
+}
+
+.botao-02{
+    background-color: #000000;
+    color: rgb(255, 255, 255);
+    padding: 10px 20px; /* Ajuste o padding conforme necessário */
+    width: 100%; /* Ajuste a largura conforme necessário */
+    border-radius: 5px;
+    border: 1px solid #ddd; /* Cor da borda */
+    font-family: "Noto Sans", sans-serif;
+    text-align: center;
     cursor: pointer;
 }
 
-.carro-item:hover {
-    transform: scale(1.05);
+.botao-02:hover{
+    background-color: #66666696;
+}
+
+
+.botao-01:hover{
+    background-color: #7d0505cc;
+    color: black;
 }
 
 
 
+
+
+/* Seção de Pesquisa */
 .section-cep {
     background-color: #fff;
     text-align: center;
@@ -232,40 +228,35 @@ section span{
     align-items: center;
     margin: 0 auto;
     width: 30%;
-  
 }
 
 .section-cep h2 {
-     /*font-size: 20px; */
     margin-bottom: 10px;
 }
 
 .section-cep p {
-    /* font-size: 18px;*/
     color: #666;
     margin-bottom: 20px;
 }
 
-.section-cep input img {
-    
-    padding: 10px;
-    width: 100%;
-    max-width: 500px;
-    border: 1px solid #ddd;
-    border-radius: 15px;
-    font-size: 16px;
-    text-align: center;
-    margin-bottom: 200px;
-    padding: 10px 10px 10px 40px; /* Espaço à esquerda para a lupa */
-}
-
-.pesquisa{
+.pesquisa {
     position: relative;
     width: 100%;
     max-width: 500px;
 }
 
-.pesquisa img.Lupa{
+.pesquisa input {
+    width: 100%;
+    max-width: 500px;
+    padding: 10px 10px 10px 40px; /* Espaço à esquerda para a lupa */
+    border: 1px solid #ddd;
+    border-radius: 15px;
+    font-size: 16px;
+    text-align: center;
+    margin-bottom: 200px;
+}
+
+.pesquisa img.Lupa {
     position: absolute;
     top: 50%;
     left: 10px;
@@ -275,31 +266,14 @@ section span{
     pointer-events: none;
 }
 
-.pesquisa input{
-    width: 100%;
-    max-width: 500px;
-    padding: 10px 10px 10px 40px; /* Espaço à esquerda para a lupa */
-    border: 1px solid #ddd;
-    border-radius: 15px;
-    font-size: 16px;
-    text-align: center;
-    margin-bottom: 200px;
-}
-
-
-/* -------------------------------------- */
-
-
-/*Aba de Sobre/Footer*/
+/* Aba de Sobre/Footer */
 footer {
     height: 10vh;
     background: #ecece2;
     text-align: center;
 }
 
-.teste{
+.teste {
     border: 1px solid black;
     height: 600px;
-    
-    
 }
