--- a/LM/Project/Step-1/styles/index.css
+++ b/LM/Project/Step-1/styles/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 
+
 * {
     margin: 0;
     padding: 0;
@@ -56,6 +57,7 @@ header nav a:hover {
 
 .text-center button {
     margin: 20px 0;
+    border: none;
     background: #ff0000;
     width: 250px;
     color: #fff;
@@ -114,107 +116,93 @@ header nav a:hover {
     cursor: pointer;
 }
 
-/* Tela principal/produtos */
-main {
-    min-height: 100vh;
-    text-align: center;
-    padding: 100px 25%;
-}
+@media (max-width: 700px) {
+    header .container nav {
+        display: none;
+    }
 
-section h1 {
-    font-weight: 900;
-    font-size: xx-large;
-}
-
-section span {
-    font-weight: 600;
-    font-size: large;
+    header .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 /* Grid de Carros */
-.carro-grid {
-    margin-top: 100px;
-    display: grid;
-    justify-content: center;
-    align-items: center;
-    grid-template-columns: repeat(2, minmax(500px, 1fr));
-    gap: 50px;
-    padding: 20px;
-}
-
-.carro-item {
-    position: relative;
-    overflow: hidden;
-    background: #fff;
-    border-radius: 15px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    height: 85vh;
-    transition: transform 0.3s ease;
-    cursor: pointer;
-}
-
-.carro-item img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    transition: transform 0.3s ease; 
-    object-fit: cover; 
-}
-
-.carro-item:hover img {
-    transform: scale(1.05);
-}
-
-
-.butao{
+main {
     display: flex;
-    flex-direction: column; 
-    align-items: center; 
-    gap: 10px;
-    position: absolute; 
-    bottom: 5%; 
-    left: 50%;
-    transform: translateX(-50%);;
-    width: 31vw;
-}
-
-.botao-01{
-    background-color: #f80808;
-    padding: 10px 20px; 
-    width: 100%; 
-    border-radius: 5px;
-    border: 1px solid #000000; 
-    font-family: "Noto Sans", sans-serif;
+    align-items: center;
+    justify-content: center;
     text-align: center;
-    cursor: pointer;
-    
-    color: #FFF;
-    font-weight: 800;
-}
-
-.botao-02{
-    background-color: #000000;
-    color: rgb(255, 255, 255);
-    padding: 10px 20px; 
-    width: 100%; 
-    border-radius: 5px;
-    border: 1px solid #ddd; 
-    font-family: "Noto Sans", sans-serif;
-    text-align: center;
-    cursor: pointer;
-}
-
-.botao-02:hover{
-    background-color: #66666696;
+    flex-direction: column;
 }
 
 
-.botao-01:hover{
-    background-color: #7d0505cc;
-    color: black;
+main .cars {
+    display: grid;
+    grid-template-columns: repeat(2, minmax(300px, 1fr));
+    gap: 20px;
 }
 
+@media (max-width: 800px) {
+    main .cars {
+        display: grid;
+        grid-template-columns: 1fr;
+        gap: 20px;
+    }
+}
 
+.cars-description {
+    margin: 0 0 50px 0;
+}
+
+.produto h2 {
+
+    margin: 0 0 25px 0;
+
+}
+
+.produto {
+    margin: 20px;
+    padding: 15px 20px;
+    margin-bottom: 50px;
+}
+
+.produto:hover{
+    transition: all 0.3s;
+    border-radius: 15px;
+    border: 2px solid #000;
+}
+
+.produto .desc {
+    display: flex;
+    flex-direction: column;
+    text-align: start;
+    margin: 50px 0;
+
+    font-weight: 600;
+}
+
+.botao {
+    width: 80%;
+    font-weight: 900;
+    border: none;
+    border-radius: 4px;
+    text-decoration: none;
+    padding: 15px 20px;
+    margin: 5px 0;
+}
+
+.information {
+    color: #fff;
+    background: #ff0000;
+}
+
+.models {
+    color: #000;
+    border: 1px solid #000;
+    background: transparent;
+}
 
 
 
@@ -243,6 +231,10 @@ section span {
     position: relative;
     width: 100%;
     max-width: 500px;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .pesquisa input {
@@ -253,7 +245,7 @@ section span {
     border-radius: 15px;
     font-size: 16px;
     text-align: center;
-    margin-bottom: 200px;
+    margin-bottom: 100px;
 }
 
 .pesquisa img.Lupa {
@@ -269,11 +261,69 @@ section span {
 /* Aba de Sobre/Footer */
 footer {
     height: 10vh;
-    background: #ecece2;
+    background: #000;
+
+    color: #fff;
+
     text-align: center;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    max-width: 100vw;
+
+    padding: 0 150px;
+}
+
+footer .content {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
+
+footer .content .github a {
+    color: #FFF;
+    text-decoration: none;
+}
+
+footer .content .github a:visited {
+    color: #FFF;
+}
+
+footer .content .github a:hover {
+    color: #FFF;
+    text-decoration: underline;
+}
+
+@media (max-width: 850px) {
+    footer .content .github {
+        display: none;
+    }
+
+    footer .content .redes {
+        display: none;
+    }
 }
 
 .teste {
     border: 1px solid black;
-    height: 600px;
+    height: 100px;
+}
+
+/*Youtube*/
+
+.yt-video {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    text-align: center;
+    flex-direction: column;
+
+    margin: 100px 0px;
+}
+
+.yt-video > h1 {
+    margin: 20px 0;
 }
