--- a/LM/Project/Step-1/styles/index.css
+++ b/LM/Project/Step-1/styles/index.css
@@ -317,13 +317,18 @@ footer .content .github a:hover {
     display: flex;
     align-items: center;
     justify-content: center;
-
-    text-align: center;
     flex-direction: column;
-
-    margin: 100px 0px;
+    margin: 100px 0;
 }
 
-.yt-video > h1 {
-    margin: 20px 0;
+.yt-video iframe {
+    width: 100%;
+    max-width: 560px; 
+    height: 315px; 
+}
+
+@media (max-width: 600px) {
+    .yt-video iframe {
+        max-width: 100%;
+    }
 }
